# masterproject

./: .gitignore  LICENSE  Makefile  README.md  Untitled25.ipynb  goodandbadwords.ipynb  gpu_20605523.err  gpu_20605523.out  gpu_20606362.err  gpu_20606362.out  gpu_20608564.err  gpu_20608564.out  gpu_20608600.err  gpu_20608600.out  gpu_20611507.err  gpu_20611507.out  gpu_20611605.err  gpu_20611605.out  gpu_20615157.err  gpu_20615157.out  gpu_20615579.err  gpu_20615579.out  gpu_20616015.err  gpu_20616015.out  gpu_20616302.err  gpu_20616302.out  gpu_20616461.err  gpu_20616461.out  gpu_20673872.err  gpu_20673872.out  gpu_20897105.err  gpu_20897105.out  gpu_20900046.out  gpu_20904182.out  gpu_20906457.err  gpu_20906457.out  gpu_20910767.err  gpu_20910767.out  gpu_20910771.err  gpu_20910771.out  (+86 more)
.dvc/: config
config/: default_config.yaml
config/data/: data.yaml  data_fast.yaml
data/: raw.dvc
dockerfiles/: gramai_app.dockerfile  train_model.dockerfile
fine-tuned-model/: adapter_config.json
fine-tuned-model-full-data-4-epoch/: adapter_config.json
jupyterfiles/: cleannessdatagen.ipynb  dataexploration copy.ipynb  dataexploration.ipynb
src/: README.md  allscoreseval.py  config.yaml  evaluate.py  explainability.py  explainability2.py  explainability3.py  explainability4.py  explainability5.py  finetunegemma.py  finetunegemmaepoch2.py  train_cnn_model.py  train_cnn_model_4classes.py  train_cnn_model_extra_layers.py  train_cnn_model_large_filter.py  train_model.py  train_vit_model.py  umapmodel.py  util.py
tests/: test_data.py  test_train_model.py
(+72 files in other folders)
